--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "1-minute-ambulance",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "WhatsApp Ambulance Bot",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.13.5",
-    "express": "^5.2.1"
+    "axios": "^1.6.0",
+    "express": "^4.18.2"
   }
 }
