--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "1-minute-ambulance",
   "version": "1.0.0",
-  "description": "WhatsApp Ambulance Bot",
-  "main": "server.js",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node backend/server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2"
   }
 }
